<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/adapter_gallery_image_send_my_gallery"
        android:orderInCategory="100"
        android:title="@string/send_to_my_gallery" />

    <item
        android:id="@+id/adapter_gallery_image_canvas_gallery_pic"
        android:orderInCategory="101"
        android:title="@string/canvas_gallery_pic" />
  <!--  <item
        android:id="@+id/adapter_gallery_image_canvas_me"
        android:orderInCategory="101"
        android:title="@string/canvas_me" />-->
    <item
        android:id="@+id/adapter_gallery_image_paste_me"
        android:orderInCategory="101"
        android:title="@string/paste_me" />
   <!-- <item
        android:id="@+id/adapter_gallery_image_canvas_my_pic"
        android:orderInCategory="101"
        android:title="@string/canvas_my_pic" />-->
</menu>