<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:background="@color/blue"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_98sdp"
            android:layout_marginTop="@dimen/_46sdp"
            android:weightSum="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_weight="1"
                android:text="@string/share_image"
                android:textAppearance="@android:style/TextAppearance.Holo.Large"
                android:typeface="serif"
                android:textAlignment="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_256sdp"
            android:orientation="vertical">
            <Button
                android:id="@+id/shareFbmygaller"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_65sdp"
                android:background="@drawable/border"
                android:textSize="@dimen/_30sdp"
                android:text="@string/facebook_share"/>
            <Button
                android:id="@+id/shareinstamygaller"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_65sdp"
                android:background="@drawable/border"
                android:textSize="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/instagram_share"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>