<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f0f7"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include layout="@layout/header"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/main_royalty_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="245dp"
                android:layout_marginTop="@dimen/_3sdp"
                android:orientation="vertical"
                android:layout_weight="0.80">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:id="@+id/iv_royalty_image_detail"
                    android:src="@drawable/ic_placeholder"/>

                <TextView
                    android:id="@+id/activity_royalty_gallery_details_image_owenerName"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:textAlignment="center"
                    android:textSize="@dimen/_12sdp"
                    android:paddingTop="@dimen/_4sdp"
                    android:background="@color/white"
                    />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="4">

                <Button
                    android:id="@+id/btn_send_my_gallery"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="#A9D041"
                    android:layout_margin="@dimen/_2sdp"
                    android:text="@string/send_to_my_gallery"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp"
                    android:layout_height="wrap_content"/>

                <Button
                    android:id="@+id/btn_canvas_royalty_pic"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/canvasmepic"
                    android:background="#A9D041"
                    android:layout_margin="@dimen/_2sdp"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp" />

                <Button
                    android:id="@+id/btn_royalty_paste_me"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/paste_me"
                    android:layout_margin="@dimen/_2sdp"
                    android:background="#A9D041"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp" />

                <Button
                    android:id="@+id/btn_royalty_img_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#A9D041"
                    android:text="@string/image_details"
                    android:textAllCaps="false"
                    android:layout_margin="@dimen/_2sdp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
