<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_margin="@dimen/_5sdp"
    android:background="@drawable/border"
    android:layout_height="@dimen/_60sdp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/adapter_categorydetails_list_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.6"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/adapter_categorydetails_list_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center|left"
                android:gravity="center|left"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_placeholder" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_weight="0.5"
            android:weightSum="2"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_weight="0.4"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/adapter_categorydetails_list_txtimagename"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/imagename"
                    android:layout_gravity="center|left"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:textSize="@dimen/_15sdp" />

            <TextView
                android:id="@+id/adapter_categorydetails_list_txtdescription"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/description"
                android:layout_gravity="center|left"
                android:layout_weight="1"
                android:gravity="center|left"
                android:textSize="@dimen/_15sdp" />


            </LinearLayout>

            <TextView
                android:id="@+id/adapter_categorydetails_list_txtprice"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/price"
                android:layout_gravity="center|left"
                android:layout_weight="1.5"
                android:gravity="center|left"
                android:textSize="@dimen/_15sdp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>